[project]
name = "sahha"
version = "0.1.0"
description = "A simple Sahha API FastAPI server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "fastapi>=0.110.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.1",
    "pydantic>=2.10.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sahha = "sahha:app"